--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
+  <head>
+    <script src = "js/jquery-3.3.1.min.js"></script>
+    <link rel = "stylesheet" href = "css/index.css">
+  </head>
   <body>
     hello!
-
   </body>
 </html>
