Add bootstrap support.
Imported twitter bootstrap and began work on disease selection
dropdown.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
   <head>
     <script src = "js/jquery-3.3.1.min.js"></script>
+    <script src = "bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <link rel = "stylesheet" href = "bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel = "stylesheet" href = "css/index.css">
   </head>
   <body>
-    hello!
+    <div class = "dropdown">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Choose a drug...</a>
+
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+    </div>
   </body>
 </html>
