--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel = "stylesheet" href = "css/index.css">
   </head>
   <body>
-    <div class = "dropdown">
+    <div class = "dropdown show">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Choose a drug...</a>
 
     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
