Fix dropdown menu.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel = "stylesheet" href = "css/index.css">
   </head>
   <body>
-    <div class = "dropdown show">
-      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Choose a drug...</a>
+  
+    <div class="dropdown show">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Dropdown link
+      </a>
 
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <a class="dropdown-item" href="#">Action</a>
         <a class="dropdown-item" href="#">Another action</a>
         <a class="dropdown-item" href="#">Something else here</a>
       </div>
-    </div>
+    </div> 
   </body>
 </html>
