Add inline block class to dropdown.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   
-    <div class="dropdown show">
+    <div class="dropdown show div-inline">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Dropdown link
       </a>
