--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <link rel = "stylesheet" href = "css/index.css">
   </head>
   <body>
-  
-    <div class="dropdown show div-inline">
-      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Dropdown link
-      </a>
-
-      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-      </div>
+    <div class="dropdown">
+      <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select a drug  <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+        <li><a href="#">Nicotine</a></li>
+        <li><a href="#">Narcotics</a></li>
+        <li><a href="#">RX drugs</a></li>
+      </ul>
     </div> 
   </body>
 </html>
