--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <li><a href="#">Narcotics</a></li>
         <li><a href="#">RX drugs</a></li>
       </ul>
-    </div> 
+    </div>
+  
+  <div class="panel panel-default info-card">
+      Info card
+  </div>
+ 
   </body>
 </html>
