--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel = "stylesheet" href = "css/index.css">
   </head>
   <body>
-    <div class="dropdown">
+    <div class="dropdown dropdown-pos">
       <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select a drug  <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
