Add background picture of human body systems.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       </ul>
     </div>
   
+  <div class = "panel panel-default body-diagrams">
+  
+  </div>
+ 
   <div class="panel panel-default info-card">
       Info card
   </div>
